--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="pashu123@github.io">HTML5 UP</a></li>
+								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="pashu123@github.io"> Prashant Kumar</a></li>
 							</ul>
 						</div>
 					</section>
