--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 										<li class="icon solid fa-code">Write all the code</li>
 										<li class="icon solid fa-coffee">Drink much coffee</li>
 										<li class="icon solid fa-book">Read books and stuff</li>
-                                        <li class="icon solid fa-cube"></li>
+                                        <li class="icon solid fa-cube">Polyhedral Stuff</li>
 										<li class="icon solid fa-bolt">Lightning bolt</li>
-										<li class="icon solid fa-users">Shadow clone technique</li>
+										<li class="icon solid fa-users">Socialize</li>
 									</ul>
 								</div>
 							</section>
